# lab-trans-reservations-fastapi-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example.txt  pyproject.toml  setup-db.sh
alembic/: env.py
alembic/versions/: 17cfabd1a957_initial_migration_create_tables.py  a1b2c3d4e5f6_add_usuarios_and_participantes.py  b2c3d4e5f6a7_add_criado_por_email_to_reservas.py
app/: crud.py  main.py  models.py  routes.py  schemas.py
app/services/: auth.py  database.py
docs/: requirements.md  requisitos.md.bak
